[testing] -> [core] 'pcre-8.44-1' move

--- a/pcre/repos/core-x86_64/PKGBUILD
+++ b/pcre/repos/core-x86_64/PKGBUILD
@@ -4,8 +4,8 @@
 # Contributor: John Proctor <jproctor@prium.net>
 
 pkgname=pcre
-pkgver=8.43
-pkgrel=2
+pkgver=8.44
+pkgrel=1
 pkgdesc='A library that implements Perl 5-style regular expressions'
 arch=('x86_64')
 url='https://www.pcre.org/'
@@ -13,8 +13,8 @@ license=('BSD')
 depends=('gcc-libs' 'readline' 'zlib' 'bzip2' 'bash')
 validpgpkeys=('45F68D54BBE23FB3039B46E59766E084FB0F43D8') # Philip Hazel
 source=("https://ftp.pcre.org/pub/pcre/$pkgname-$pkgver.tar.bz2"{,.sig})
-md5sums=('636222e79e392c3d95dcc545f24f98c4'
-         'SKIP')
+sha512sums=('f26d850aab5228799e58ac8c2306fb313889332c39e29b118ef1de57677c5c90f970d68d3f475cabc64f8b982a77f04eca990ff1057f3ccf5e19bd137997c4ac'
+            'SKIP')
 
 prepare() {
   cd $pkgname-$pkgver
