--- a/jbig2dec/repos/extra-x86_64/PKGBUILD
+++ b/jbig2dec/repos/extra-x86_64/PKGBUILD
@@ -3,8 +3,8 @@
 # Contributor: Stefan Husmann <stefan-husmann@t-online.de>
 
 pkgname=jbig2dec
-pkgver=0.17
-_gsver=gs950
+pkgver=0.18
+_gsver=gs951
 pkgrel=1
 pkgdesc='Decoder implementation of the JBIG2 image compression format'
 url='https://jbig2dec.com/'
@@ -12,7 +12,12 @@ arch=('x86_64')
 license=('GPL3')
 depends=('libpng')
 source=("https://github.com/ArtifexSoftware/ghostpdl-downloads/releases/download/${_gsver}/${pkgname}-${pkgver}.tar.gz")
-sha512sums=('e1ac4af318fb31e097b558e6b88334d35e035d1378b152aabb025f2918969a3a79c6a6644848fccf5d4eaa6efaf2b0422ff01d5bbcde8245f7af6fa29022d9b8')
+sha512sums=('9d9da97a54562b092b30c67ec959d1c48f737316ebf3e6a9fbc5a2fcdf635b0703027c90a904e45dedb1d9400281cae9dd424ae78aa47979862791ccceb7077d')
+
+prepare() {
+	cd ${pkgname}-${pkgver}
+	autoreconf -vfi
+}
 
 build() {
 	cd ${pkgname}-${pkgver}
