--- a/memcached/trunk/PKGBUILD
+++ b/memcached/trunk/PKGBUILD
@@ -3,8 +3,8 @@
 # Contributor: Michael Irwin <6d6469@gmail.com>
 
 pkgname=memcached
-pkgver=1.5.14
-pkgrel=2
+pkgver=1.5.16
+pkgrel=1
 pkgdesc='Distributed memory object caching system'
 url='https://memcached.org/'
 arch=('x86_64')
@@ -14,12 +14,13 @@ optdepends=('perl: for memcached-tool usage')
 source=(https://www.memcached.org/files/${pkgname}-${pkgver}.tar.gz
         memcached.tmpfiles
         memcached.sysusers)
-sha256sums=('9c5bdf29a780fb6c6f7c9eaaeeda0583efdf663193758c3e316c969a510af2a9'
-            'c4d0ae2218b99a276ff6e0084ae81e66add0ca9347e4bde70e9172db6e44002a'
-            '228c4f536f3c9f9eee4e11226ec8846a22d4ba46c2d3bf2811413efcc322609a')
-sha512sums=('d06083d971d0a40195b4dfb252a3bf7c3a0d20b2dcad56726ff9e0b87ba84024309300516dad40181f1b7af4d9c4f35924383977c5e1ff9b5f13d2ef05f684ed'
+sha512sums=('999872c4c68e0210feab76f74c9487fbfb652cf3e6b7fa347f882767aad41ea6d8ba3ee056494409c054d673fc209032d8a890605810b2c6c9048d26d50751a0'
             '960705ff74d25afed477e0b2a5872a3a4fb49ed3105a351f0d0224abc947778f9dbda81e80be94ab636da4a8411a9dd56a8fd4513e5b86a3096a14fa67f1548b'
             'e6ddcab9a6fee024072b6363ef60aa176ed258369bf3a17d475f19b1f410ffd6195b9c5737dc5b1371e8974b44bdbdaa109927acaeb54fb40302a5d67d7c13a8')
+
+prepare() {
+  cd ${pkgname}-${pkgver}
+}
 
 build() {
   cd ${pkgname}-${pkgver}
@@ -31,7 +32,7 @@ build() {
 
 check() {
   cd ${pkgname}-${pkgver}
-  make test || :
+  make test
 }
 
 package() {
