[trunk] -> [extra] 'autogen-5.18.16-1' add

--- a/autogen/repos/extra-x86_64/PKGBUILD
+++ b/autogen/repos/extra-x86_64/PKGBUILD
@@ -3,16 +3,18 @@
 # Contributor: Tor Krill
 
 pkgname=autogen
-pkgver=5.18.14
+pkgver=5.18.16
 pkgrel=1
 pkgdesc="A tool designed to simplify the creation and maintenance of programs that contain large amounts of repetitious text"
 arch=('x86_64')
 url="https://www.gnu.org/software/autogen/"
 license=('GPL3')
-depends=('guile2.0' 'libxml2')
+depends=('guile' 'libxml2')
+makedepends=('autogen')
 source=(https://ftp.gnu.org/gnu/${pkgname}/rel${pkgver}/${pkgname}-${pkgver}.tar.xz{,.sig})
-validpgpkeys=('44A088E295C3A722C450590EC9EF76DEB74EE762') # Bruce Korb <bkorb@gnu.org>
-sha512sums=('dab8c8e00cb97cfaeff5adc0e0c2931ae79044864bdf70f396f865835c660cbc15d1bc4a34a9aae8e093feb1d178fe1fbb96d657c0f1ce64d9f4705a4e585c00'
+validpgpkeys=('44A088E295C3A722C450590EC9EF76DEB74EE762'
+              '3EEE51D1355B8EC40D9F3122495143D05D0712D1') # Bruce Korb <bkorb@gnu.org>
+sha512sums=('5f12c982dbe27873f5649a96049bf019ff183c90cc0c8a9196556b0ca02e72940cd422f6d6601f68cc7d8763b1124f2765c3b1a6335fc92ba07f84b03d2a53a1'
             'SKIP')
 
 prepare() {
